--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="header">Josue ocanha costa 2023/2024/2025/2026</header>
+    <header class="header">Josue ocanha costa 2023/2024/2025/20262027</header>
     <section class="about"></section>
     <section class="social-media"></section>
     <section class="projects"></section>
