--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="header">Josue ocanha costa 2020/2021/2022/2023/2024/2025/2026/2027/2028/2029/2030</header>
+    <header class="header">Josue ocanha costa 2020/2021/2022/2023/2024/2025/2026/2027/2028/2029/2030 - prazo para mudança de area</header>
     <section class="about"></section>
     <section class="social-media"></section>
     <section class="projects"></section>
