criação de header menu

--- a/index.html
+++ b/index.html
@@ -13,12 +13,33 @@
     <link rel="stylesheet" href="src/css/globals/globals.css">
     <link rel="stylesheet" href="src/css/session/header.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-    <title>Josué Ocanha Costa</title>
+    <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
 
 <body>
     <header class="header">
+        <div class="container">
+            <div class="row">
+                <a href="#">
+                    <h1 class="logo">JO</h1>
+                </a>
 
+                <nav>
+                    <input type="checkbox" id="menu-hamburguer">
+                    <label for="menu-hamburguer">
+                        <div class="menu">
+                            <span class="hamburguer"></span>
+                        </div>
+                    </label>
+
+                    <ul>
+                        <li><a href="#sobre-min">Sobre Mim</a></li>
+                        <li><a href="#habilidades">Habilidades</a></li>
+                        <li><a href="#projetos">Meus projetos</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     
 </body>
