--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-between alinhar-itens-no-centro">
                 <a href="#">
                     <h1 class="logo">JO</h1>
                 </a>
