--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="src/css/globals/variables.css">
     <link rel="stylesheet" href="src/css/globals/globals.css">
     <link rel="stylesheet" href="src/css/session/header.css">
+    <link rel="stylesheet" href="src/css/session/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
@@ -33,7 +34,7 @@
                     </label>
 
                     <ul>
-                        <li><a href="#sobre-min">Sobre Mim</a></li>
+                        <li><a href="#sobre-mim">Sobre Mim</a></li>
                         <li><a href="#habilidades">Habilidades</a></li>
                         <li><a href="#projetos">Meus projetos</a></li>
                     </ul>
@@ -41,6 +42,40 @@
             </div>
         </div>
     </header>
+
+    <section class="home" >
+        <div class="container">
+            <div class="row full-screen alinhar-itens-no-centro">
+                <div class="texto-home">
+                    <p>Olá 🖖, </p>
+                    <h1>Sou o Josué Costa</h1>
+                    <h2>Desenvolvedor Frontend</h2>
+                    <div class="redes-sociais">
+                        <a href="" class="outher-shadow">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="" class="outher-shadow">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        <a href="" class="outher-shadow">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="" class="outher-shadow">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+                
+
+                <div class="img-home">
+                    <din class="img-box inner-shadow">
+                        <img src="src/images/perfil.jpg" alt="foto do perfil" class="outher-shadow">
+                    </din>
+                </div>
+
+            </div>
+        </div>
+    </section>
     
 </body>
 
