concluindo sessão home e criando sessão sobre-mim

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="src/css/globals/globals.css">
     <link rel="stylesheet" href="src/css/session/header.css">
     <link rel="stylesheet" href="src/css/session/home.css">
+    <link rel="stylesheet" href="src/css/session/sobre-mim.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
@@ -73,6 +74,36 @@
                     </din>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="sobre-mim section" id="sobre-mim">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2>Sobre Mim</h2>
+                </div>
+
+                <div class="row">
+                    <div class="imagem-sobre-mim">
+                        <div class="img-box inner-shadow">
+                            <img src="src/images/perfil.jpg" alt="foto do perfil">
+                        </div>
+                    </div>
+                    
+                    <div class="informacoes-sobre-mim">
+                        <p> <strong> Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Quos molestias repudiandae rem voluptatibus sint fuga omnis quas cum molestiae, consectetur quaerat, ab optio maiores hic, ratione possimus provident vero? Quo.</p>
+
+                        <p>Totam itaque nulla dolorum magnam atque numquam illo ad aperiam mollitia minus quaerat perspiciatis ratione eos, molestiae, quia nobis.</p>
+
+                        <p>Dolore, tempora quo laudantium ratione adipisci reprehenderit quos iste itaque ab aut ad porro fugit provident assumenda obcaecati?</p>
+
+                        <div class="botoes">
+                            <a href="src/arquivos/cv.pdf" class="botao outher-shadow">Veja meu CV</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
