conclusão do sobre-mim

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="imagem-sobre-mim">
                         <div class="img-box inner-shadow">
-                            <img src="src/images/perfil.jpg" alt="foto do perfil">
+                            <img src="src/images/perfil.jpg" alt="foto do perfil" class="outher-shadow">
                         </div>
                     </div>
                     
@@ -100,7 +100,7 @@
                         <p>Dolore, tempora quo laudantium ratione adipisci reprehenderit quos iste itaque ab aut ad porro fugit provident assumenda obcaecati?</p>
 
                         <div class="botoes">
-                            <a href="src/arquivos/cv.pdf" class="botao outher-shadow">Veja meu CV</a>
+                            <a target="_blank" href="src/arquivos/cv.pdf" class="botao outher-shadow">Veja meu CV</a>
                         </div>
                     </div>
                 </div>
