--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="src/css/session/header.css">
     <link rel="stylesheet" href="src/css/session/home.css">
     <link rel="stylesheet" href="src/css/session/sobre-mim.css">
+    <link rel="stylesheet" href="src/css/session/habilidades.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
@@ -105,6 +106,60 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="habilidades section" id="habilidades">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2>Habilidades</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-habilidades row">
+            <div class="habilidade">
+                <div class="logo">
+                    <i class="devicon devicon-javascript-plain"></i>
+                </div>
+                <h3>JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+            </div>
+
+            <div class="habilidade">
+                <div class="logo">
+                    <i class="devicon devicon-html5-plain-wordmark"></i>
+                </div>
+                <h3>HTML5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+            </div>
+
+            <div class="habilidade">
+                <div class="logo">
+                    <i class="devicon devicon-css3-plain-wordmark"></i>
+                </div>
+                <h3>CSS3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+            </div>
+
+            <div class="habilidade">
+                <div class="logo">
+                    <i class="devicon devicon-github-original"></i>
+                </div>
+                <h3>Github</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+            </div>
+
+            <div class="habilidade">
+                <div class="logo">
+                    <i class="devicon devicon-git-plain"></i>
+                </div>
+                <h3>Git</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+            </div>
+
+            
         </div>
     </section>
     
