--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="src/css/session/home.css">
     <link rel="stylesheet" href="src/css/session/sobre-mim.css">
     <link rel="stylesheet" href="src/css/session/habilidades.css">
+    <link rel="stylesheet" href="src/css/session/projetos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
@@ -163,6 +164,63 @@
         </div>
     </section>
     
+    <section class="projetos" id="projetos">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2>Meus Projetos</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-projetos container">
+            <div class="projeto">
+                <a href="#">
+                    <img src="https://placehold.co/515x700" alt="projeto 1">
+                    </img>
+                    <h3>Projeto 1</h3>
+                    <div class="informacoes-projeto">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus maxime alias corrupti temporibus dolores eaque doloremque cumque, sequi, id at. </p>
+                        <p>🔗 Ver no Github Pages</p>
+                    </div>
+                </a>
+            </div>
+            <div class="projeto">
+                <a href="#">
+                    <img src="https://placehold.co/515x700" alt="projeto 2">
+                    </img>
+                    <h3>Projeto 2</h3>
+                    <div class="informacoes-projeto">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus maxime alias corrupti temporibus dolores eaque doloremque cumque, sequi, id at. </p>
+                        <p>🔗 Ver no Github Pages</p>
+                    </div>
+                </a>
+            </div>
+            <div class="projeto">
+                <a href="#">
+                    <img src="https://placehold.co/515x700" alt="projeto 3">
+                    </img>
+                    <h3>Projeto 3</h3>
+                    <div class="informacoes-projeto">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus maxime alias corrupti temporibus dolores eaque doloremque cumque, sequi, id at. </p>
+                        <p>🔗 Ver no Github Pages</p>
+                    </div>
+                </a>
+            </div>
+            <div class="projeto">
+                <a href="#">
+                    <img src="https://placehold.co/515x700" alt="projeto 4">
+                    </img>
+                    <h3>Projeto 4</h3>
+                    <div class="informacoes-projeto">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus maxime alias corrupti temporibus dolores eaque doloremque cumque, sequi, id at. </p>
+                        <p>🔗 Ver no Github Pages</p>
+                    </div>
+                </a>
+            </div>
+            
+        </div>
+    </section>
 </body>
 
 </html>
