projeto concluido dados padrão

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="src/css/session/sobre-mim.css">
     <link rel="stylesheet" href="src/css/session/habilidades.css">
     <link rel="stylesheet" href="src/css/session/projetos.css">
+    <link rel="stylesheet" href="src/css/session/footer.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Josué Costa - Desenvolvedor FrontEnd</title>
 </head>
@@ -221,6 +222,26 @@
             
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <h2>Me envie uma mensagem</h2>
+            <div class="redes-sociais">
+                <a href="" class="outher-shadow">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="" class="outher-shadow">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="" class="outher-shadow">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" class="outher-shadow">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
