Inserindo dados oficiais

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                     <h1>Sou o Josué Costa</h1>
                     <h2>Desenvolvedor Frontend</h2>
                     <div class="redes-sociais">
-                        <a href="" class="outher-shadow">
+                        <a href="https://www.linkedin.com/in/josue-ocanha-costa-09b9a4166/" class="outher-shadow" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="" class="outher-shadow">
+                        <a href="https://wa.me/+5565993408371?text=Olá 🖖, gostaria de falar com você." class="outher-shadow" target="_blank">
                             <i class="fab fa-whatsapp"></i>
                         </a>
-                        <a href="" class="outher-shadow">
+                        <a href="https://github.com/JosueCosta2023" class="outher-shadow" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="" class="outher-shadow">
-                            <i class="fab fa-instagram"></i>
+                        <a href="https://www.facebook.com/JosueOcanhaCosta2023/" class="outher-shadow" target="_blank">
+                            <i class="fab fa-facebook"></i>
                         </a>
                     </div>
                 </div>
@@ -227,17 +227,17 @@
         <div class="container">
             <h2>Me envie uma mensagem</h2>
             <div class="redes-sociais">
-                <a href="" class="outher-shadow">
+                <a href="https://www.linkedin.com/in/josue-ocanha-costa-09b9a4166/" class="outher-shadow" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="" class="outher-shadow">
+                <a href="https://wa.me/+5565993408371?text=Olá 🖖, gostaria de falar com você." class="outher-shadow" target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="" class="outher-shadow">
+                <a href="https://github.com/JosueCosta2023" class="outher-shadow" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" class="outher-shadow">
-                    <i class="fab fa-instagram"></i>
+                <a href="https://www.facebook.com/JosueOcanhaCosta2023/" class="outher-shadow" target="_blank">
+                    <i class="fab fa-facebook"></i>
                 </a>
             </div>
         </div>
