Implemtação de dados pessoais.

--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
                     </div>
                     
                     <div class="informacoes-sobre-mim">
-                        <p> <strong> Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Quos molestias repudiandae rem voluptatibus sint fuga omnis quas cum molestiae, consectetur quaerat, ab optio maiores hic, ratione possimus provident vero? Quo.</p>
+                        <p> <strong> Desenvolvedor Web apaixonado por tecnologia</strong>, meu primeiro contato com programação foi em 2012. Neste período eu estava curioso sobre o universo de desenvolvimento de jogos, e na ferramenta Blender encontrei a primeira  linguagem programação que mudaria minha forma de pensar no meu futuro.</p>
 
-                        <p>Totam itaque nulla dolorum magnam atque numquam illo ad aperiam mollitia minus quaerat perspiciatis ratione eos, molestiae, quia nobis.</p>
+                        <p>Por mais que a linguagem tenha chamado minha atenção eu não consegui dobra-la. Após esse período me perdi em outras areas fora da tecnologia mas o chamado para WEB-DEVELOPER sempre esteve comigo, sempre me encomoda e mas faz retornar ao mundo do desenvolvimento Web.</p>
 
-                        <p>Dolore, tempora quo laudantium ratione adipisci reprehenderit quos iste itaque ab aut ad porro fugit provident assumenda obcaecati?</p>
+                        <p>Hoje, foco todo meu tempo disponivel para elaborar projetos com HTML5 e CSS3, além de aperfeiçoar meu github e utilizar o git em todos os projetos.</p>
+
 
                         <div class="botoes">
                             <a target="_blank" href="src/arquivos/cv.pdf" class="botao outher-shadow">Veja meu CV</a>
@@ -121,20 +122,28 @@
         </div>
 
         <div class="container-habilidades row">
-            <div class="habilidade">
+            <!-- <div class="habilidade">
                 <div class="logo">
                     <i class="devicon devicon-javascript-plain"></i>
                 </div>
                 <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
-            </div>
+                <p>Em progresso...</p>
+            </div> -->
 
             <div class="habilidade">
                 <div class="logo">
                     <i class="devicon devicon-html5-plain-wordmark"></i>
                 </div>
                 <h3>HTML5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+                <p> Conhecimentos
+                    <ul>
+                        <li>Semântica HTML</li>
+                        <li>Código Limpo</li>
+                        <li>Formatação HTML</li>
+                        <li>HTML responsivo</li>
+                        <li>Favicon HTML</li>
+                    </ul>
+                </p>
             </div>
 
             <div class="habilidade">
@@ -142,7 +151,20 @@
                     <i class="devicon devicon-css3-plain-wordmark"></i>
                 </div>
                 <h3>CSS3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+                <p>Conhecimentos
+                    <ul>
+                        <li>CSS responsivo</li>
+                        <li>Grid-Template</li>
+                        <li>Display: flex</li>
+                        <li>Seletores</li>
+                        <li>Box-Model</li>
+                        <li>Links</li>
+                        <li>Pseudo-Classes</li>
+                        <li>Pseudo-Elementos</li>
+                        <li>Z-index</li>
+                        <li>Unidades CSS</li>
+                    </ul>
+                </p>
             </div>
 
             <div class="habilidade">
@@ -150,7 +172,16 @@
                     <i class="devicon devicon-github-original"></i>
                 </div>
                 <h3>Github</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+                <p>Conhecimentos
+                    <ul>
+                        <li>Criação de repositorios</li>
+                        <li>Clones</li>
+                        <li>Fork</li>
+                        <li>Readme</li>
+                        <li>Github Pages</li>
+                        <li>Deploy</li>
+                    </ul>
+                </p>
             </div>
 
             <div class="habilidade">
@@ -158,7 +189,17 @@
                     <i class="devicon devicon-git-plain"></i>
                 </div>
                 <h3>Git</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio praesentium libero magni consectetur quae ut ea repellendus eum rerum est quidem totam nam ipsa illum amet quas, sit consequuntur delectus!</p>
+                <p>Conhecimentos
+                    <ul>
+                        <li>Git init</li>
+                        <li>Git code .</li>
+                        <li>Git clone</li>
+                        <li>Git pull</li>
+                        <li>Git pull resquest</li>
+                        <li>Git Commit</li>
+                        <li>Git push</li>
+                    </ul>
+                </p>
             </div>
 
             
