--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                         <p>Por mais que a linguagem tenha chamado minha atenção eu não consegui dobra-la. Após esse período me perdi em outras areas fora da tecnologia mas o chamado para WEB-DEVELOPER sempre esteve comigo, sempre me encomoda e mas faz retornar ao mundo do desenvolvimento Web.</p>
 
-                        <p>Hoje, foco todo meu tempo disponivel para elaborar projetos com HTML5 e CSS3, além de aperfeiçoar meu github e utilizar o git em todos os projetos.</p>
+                        <p>Hoje, foco todo meu tempo disponivel para elaborar projetos com HTML5 e CSS3, além de aperfeiçoar meu github e inserir o git em todas as minhas rotinas de trabalho.</p>
 
 
                         <div class="botoes">
@@ -122,13 +122,18 @@
         </div>
 
         <div class="container-habilidades row">
-            <!-- <div class="habilidade">
+            <div class="habilidade">
                 <div class="logo">
                     <i class="devicon devicon-javascript-plain"></i>
                 </div>
                 <h3>JavaScript</h3>
-                <p>Em progresso...</p>
-            </div> -->
+                <p>Conhecimentos
+                    <ul>
+                        <li>Conceito DOM (Document Object Model)</li>
+                        <li>Em progresso...</li>
+                    </ul>
+                </p>
+            </div>
 
             <div class="habilidade">
                 <div class="logo">
@@ -153,16 +158,17 @@
                 <h3>CSS3</h3>
                 <p>Conhecimentos
                     <ul>
+                        <li>Unidades CSS</li>
+                        <li>Seletores</li>
+                        <li>Links</li>
                         <li>CSS responsivo</li>
                         <li>Grid-Template</li>
                         <li>Display: flex</li>
-                        <li>Seletores</li>
                         <li>Box-Model</li>
-                        <li>Links</li>
                         <li>Pseudo-Classes</li>
                         <li>Pseudo-Elementos</li>
                         <li>Z-index</li>
-                        <li>Unidades CSS</li>
+                        <li>Animação CSS</li>
                     </ul>
                 </p>
             </div>
