--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <a href="#">
                     <img src="./src/images/Formulario.jpg" alt="formulario">
                     </img>
-                    <h3>Projeto NEWSLETTER</h3>
+                    <h3>Projeto - NEWSLETTER</h3>
                     <div class="informacoes-projeto">
                         <p>
                             FRONTEND-MENTOR, criação de componente NEWSLETTER. Foco em responsividade. Aplicando conceito flex-box e trabalhando com variaveis.   
@@ -279,12 +279,23 @@
             </div>
             <div class="projeto">
                 <a href="#">
-                    <img src="https://placehold.co/515x700" alt="projeto 4">
+                    <img src="./src/images/Lista ToDogif.gif" alt="projeto 4">
                     </img>
-                    <h3>Projeto 4</h3>
+                    <h3>Projeto - Lista de Tarefas</h3>
                     <div class="informacoes-projeto">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatibus maxime alias corrupti temporibus dolores eaque doloremque cumque, sequi, id at. </p>
-                        <p>🔗 Ver no Github Pages</p>
+                        <p>
+                            Aplicando conceitos de DOM, responsividade e armazenamento em  Local Storage do navegador.
+                            Com este armazenamento é possivel atualizar a pagina do navegador e manter as tarefas inseridas. 
+
+                        </p>
+                        
+                        <p>
+                            🔗 <a href="https://josuecosta2023.github.io/toDoListinerYoutube/" target="_blank">Github Pages</a> 
+                        </p>
+
+                        <p>
+                        🔗 <a href="https://github.com/JosueCosta2023/toDoListinerYoutube" target="_blank">Github Repository</a>
+                        </p>
                     </div>
                 </a>
             </div>
