--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
                         <div class="botoes">
-                            <a target="_blank" href="src/arquivos/cv.pdf" class="botao outher-shadow">Veja meu CV</a>
+                            <a target="_blank" href="./src/arquivos/cv2023.pdf" class="botao outher-shadow">Veja meu CV</a>
                         </div>
                     </div>
                 </div>
