--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="row">
                     <div class="imagem-sobre-mim">
                         <div class="img-box inner-shadow">
-                            <img src="src/images/perfil.jpg" alt="foto do perfil" class="outher-shadow">
+                            <img src="src/images/sobre-min.jpg" alt="foto do perfil" class="outher-shadow">
                         </div>
                     </div>
                     
