--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="informacoes-sobre-mim">
                         <p> <strong> Desenvolvedor Web apaixonado por tecnologia</strong>, meu primeiro contato com programação foi em 2012. Neste período eu estava curioso sobre o universo de desenvolvimento de jogos, e na ferramenta Blender encontrei a primeira  linguagem programação que mudaria minha forma de pensar no meu futuro.</p>
 
-                        <p>Por mais que a linguagem tenha chamado minha atenção eu não consegui "dobra-la". Após esse período me perdi em outras áreas fora da tecnologia mas o chamado para WEB-DEVELOPER sempre esteve comigo me fazendo retornar ao mundo do desenvolvimento Web.</p>
+                        <p>Por mais que a linguagem tenha chamado minha atenção não consegui domina-la. Após esse período me perdi em outras áreas fora da tecnologia mas o chamado para WEB-DEVELOPER sempre esteve comigo me fazendo retornar ao mundo do desenvolvimento Web.</p>
 
                         <p>Hoje, foco todo meu tempo disponivel para elaborar projetos com HTML5, CSS3 e JavaScript, além de aperfeiçoar meu github e inserir o git em todas as minhas rotinas de trabalho.</p>
 
