--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                     <h3>Projeto - One Piece</h3>
                     <div class="informacoes-projeto">
                         <p>Realizado em workshop de tecnologia para FrontEnd. Meu primeiro contato com o JavaScript, muito desafiador e muito gratificante.  </p>
-                        <p>🔗 <a href="https://josuecosta2023.github.io/DevEmDobroOnePiece/" target="_blank">Github Pages</a> </p>
-                        <p>🔗 <a href="https://github.com/JosueCosta2023/DevEmDobroOnePiece/tree/main" target="_blank">Github Repository</a> </p>
+                        <p>🔗 <a href="https://josuecosta2023.github.io/DevQuest-Quest-OnePieceMP/" target="_blank">Github Pages</a> </p>
+                        <p>🔗 <a href="https://github.com/JosueCosta2023/DevQuest-Quest-OnePieceMP" target="_blank">Github Repository</a> </p>
                     </div>
                 </a>
             </div>
@@ -249,11 +249,11 @@
                         </p>
 
                         <p>
-                            🔗 <a href="https://josuecosta2023.github.io/html5-css3EssentialsUpInside/" target="_blank">Github Pages</a> 
+                            🔗 <a href="https://josuecosta2023.github.io/UpInsinde-Quest-BloggerPage/" target="_blank">Github Pages</a> 
                         </p>
 
                         <p>
-                            🔗 <a href="https://github.com/JosueCosta2023/html5-css3EssentialsUpInside" target="_blank">Github Repository</a> 
+                            🔗 <a href="https://github.com/JosueCosta2023/UpInsinde-Quest-BloggerPage" target="_blank">Github Repository</a> 
                         </p>
                     </div>
                 </a>
@@ -274,11 +274,11 @@
                         </p>
                         
                         <p>
-                            🔗 <a href="https://josuecosta2023.github.io/LandingPageWorkit-FrontendMentor/" target="_blank">Github Pages</a> 
+                            🔗 <a href="https://josuecosta2023.github.io/FrontEndMentor-LandingPageWorkit-/" target="_blank">Github Pages</a> 
                         </p>
 
                         <p>
-                        🔗 <a href="https://github.com/JosueCosta2023/LandingPageWorkit-FrontendMentor" target="_blank">Github Repository</a>
+                        🔗 <a href="https://github.com/JosueCosta2023/FrontEndMentor-LandingPageWorkit-" target="_blank">Github Repository</a>
                         </p>
                     </div>
                 </a>
@@ -297,11 +297,11 @@
                         </p>
                         
                         <p>
-                            🔗 <a href="https://josuecosta2023.github.io/app-previsaoTempo/" target="_blank">Github Pages</a> 
+                            🔗 <a href="https://josuecosta2023.github.io/DevQuest-Quest-app-previsaoTempo/" target="_blank">Github Pages</a> 
                         </p>
 
                         <p>
-                            🔗 <a href="https://github.com/JosueCosta2023/app-previsaoTempo" target="_blank">Github Repository</a> 
+                            🔗 <a href="https://github.com/JosueCosta2023/DevQuest-Quest-app-previsaoTempo" target="_blank">Github Repository</a> 
                         </p>
                     </div>
                 </a>
