--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="row justify-content-between alinhar-itens-no-centro">
                 <a href="#">
-                    <h1 class="logo"> FrontEnd </h1>
+                    <h1 class="logo"> Josue.Dev </h1>
                 </a>
 
                 <nav>
